<resources>
    <string name="app_name">Cat Chat</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="add_image">Add Image</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="enter_message">Enter Message</string>
</resources>